[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/stick.png" type="Texture" id=1]
[ext_resource path="res://BouncyStick.gd" type="Script" id=2]
[ext_resource path="res://BounceArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/jump.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 12 )

[node name="BouncyStick" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="LeftBounceArea" parent="." instance=ExtResource( 3 )]
position = Vector2( -16, 0 )

[node name="Light2D" parent="LeftBounceArea" index="1"]
position = Vector2( 5, 0 )

[node name="RightBounceArea" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 0 )

[node name="Light2D" parent="RightBounceArea" index="1"]
position = Vector2( -5, 0 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "FX"
[connection signal="input_event" from="." to="." method="_on_BouncyStick_input_event"]
[connection signal="body_entered" from="LeftBounceArea" to="." method="_on_LeftBounceArea_body_entered"]
[connection signal="body_exited" from="LeftBounceArea" to="." method="_on_LeftBounceArea_body_exited"]
[connection signal="body_entered" from="RightBounceArea" to="." method="_on_RightBounceArea_body_entered"]
[connection signal="body_exited" from="RightBounceArea" to="." method="_on_RightBounceArea_body_exited"]

[editable path="LeftBounceArea"]

[editable path="RightBounceArea"]
